[package]
name = "spk_recovery"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "spk_recovery"
path = "src/main.rs"

[features]
default = []
gui = ["dep:iced"]

[dependencies]
bip39 = "2.0.0"
bwk-tx = { git = "https://github.com/pythcoiner/bwk.git", rev = "e85de4f"}
bwk-sign = { git = "https://github.com/pythcoiner/bwk.git", rev = "e85de4f", default-features = false }
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3"
iced = { version = "0.13", optional = true }
miniscript = "12.3.5"
waterfalls-client = { git = "https://github.com/RCasatta/waterfalls-client.git", rev = "957aa0b9938b6b31ec3642c75aad03ce9202bf59", default-features = false, features = ["blocking", "blocking-https-rustls"] }

[patch.crates-io]
bitcoin = { git = "https://github.com/pythcoiner/rust-bitcoin.git", rev = "d7998651" }
